--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
       name="name"
       content="content"
     />
+<!--    <link rel="stylesheet" type="text/css" href="../src/reset.css">-->
+<!--    not sure why reset isn't loading up here...-->
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.4.10/Tone.min.js"></script>-->
-    <title>React App</title>
+    <title>^)Earhook(^</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
